# rng-fsp

./: .gitignore  README.md  prezentation1101.pptx  Документация_API.md
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241022_0001_initial_schema.py
backend/docker/fastapi/: Dockerfile
backend/randomtrust/: app.py
backend/randomtrust/analysis/: __init__.py  tests.py
backend/randomtrust/api/: __init__.py  dependencies.py
backend/randomtrust/api/routers/: __init__.py  analysis.py  audit.py  entropy.py  rng.py
backend/randomtrust/core/: __init__.py  config.py  database.py  logging.py  redis.py  storage.py
backend/randomtrust/entropy/: __init__.py  chaos.py  mixer.py  simulator.py
backend/randomtrust/models/: __init__.py  audit.py  entropy.py  rng_run.py  test_report.py
backend/randomtrust/repositories/: __init__.py  audit.py  entropy.py  rng.py  test_report.py
backend/randomtrust/rng/: generator.py
backend/randomtrust/schemas/: __init__.py  analysis.py  audit.py  audit_read.py  entropy.py  entropy_read.py  rng.py  rng_read.py
backend/randomtrust/services/: __init__.py  analysis_service.py  audit_service.py  entropy_service.py  rng_service.py  unit_of_work.py
