[tool.poetry]
name = "randomtrust-backend"
version = "0.1.0"
description = "RandomTrust RNG backend services"
authors = ["RandomTrust Team <team@randomtrust.local>"]
readme = "../README.md"
packages = [{ include = "randomtrust" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
redis = "^5.0.7"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
numpy = "^2.1.2"
cryptography = "^43.0.1"
orjson = "^3.10.7"
python-dotenv = "^1.0.1"
structlog = "^24.2.0"
httpx = "^0.27.0"
minio = "^7.2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
ruff = "^0.5.7"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
